added changes to user creation and updation
